drm/amd/pm: record mca debug mode in RAS (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14496,6 +14496,7 @@
 	patches.suse/1484-drm-ci-docs-add-step-about-how-to-request-privileges.patch
 	patches.suse/1485-drm-sched-Convert-the-GPU-scheduler-to-variable-numb.patch
 	patches.suse/1486-drm-amdgpu-move-buffer-funcs-setting-up-a-level.patch
+	patches.suse/1487-drm-amd-pm-record-mca-debug-mode-in-RAS.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
