--- a/series.conf
+++ b/series.conf
@@ -14497,6 +14497,7 @@
 	patches.suse/1485-drm-sched-Convert-the-GPU-scheduler-to-variable-numb.patch
 	patches.suse/1486-drm-amdgpu-move-buffer-funcs-setting-up-a-level.patch
 	patches.suse/1487-drm-amd-pm-record-mca-debug-mode-in-RAS.patch
+	patches.suse/1488-drm-amd-display-reprogram-det-size-while-seamless-bo.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
