--- a/series.conf
+++ b/series.conf
@@ -14499,6 +14499,7 @@
 	patches.suse/1487-drm-amd-pm-record-mca-debug-mode-in-RAS.patch
 	patches.suse/1488-drm-amd-display-reprogram-det-size-while-seamless-bo.patch
 	patches.suse/1489-drm-amdgpu-fix-find-ras-error-node-error.patch
+	patches.suse/1490-drm-amdgpu-refine-ras-error-kernel-log-print.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
