--- a/series.conf
+++ b/series.conf
@@ -14501,6 +14501,7 @@
 	patches.suse/1489-drm-amdgpu-fix-find-ras-error-node-error.patch
 	patches.suse/1490-drm-amdgpu-refine-ras-error-kernel-log-print.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
+	patches.suse/1492-drm-amdgpu-modify-if-condition-in-nbio_v7_7.c.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
 	patches.suse/drm-amd-Disable-PP_PCIE_DPM_MASK-when-dynamic-speed-.patch
