drm/amdgpu: Add API to get full IP version (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14504,6 +14504,7 @@
 	patches.suse/1492-drm-amdgpu-modify-if-condition-in-nbio_v7_7.c.patch
 	patches.suse/1493-drm-amd-pm-drop-unneeded-dpm-features-disablement-fo.patch
 	patches.suse/1494-drm-amdgpu-add-tmz-support-for-GC-IP-v11.5.0.patch
+	patches.suse/1495-drm-amdgpu-Add-API-to-get-full-IP-version.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
 	patches.suse/drm-amd-Disable-PP_PCIE_DPM_MASK-when-dynamic-speed-.patch
