--- a/series.conf
+++ b/series.conf
@@ -14505,6 +14505,7 @@
 	patches.suse/1493-drm-amd-pm-drop-unneeded-dpm-features-disablement-fo.patch
 	patches.suse/1494-drm-amdgpu-add-tmz-support-for-GC-IP-v11.5.0.patch
 	patches.suse/1495-drm-amdgpu-Add-API-to-get-full-IP-version.patch
+	patches.suse/1496-drm-amd-pm-Fix-the-return-value-in-default-case.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
 	patches.suse/drm-amd-Disable-PP_PCIE_DPM_MASK-when-dynamic-speed-.patch
