--- a/series.conf
+++ b/series.conf
@@ -14509,6 +14509,7 @@
 	patches.suse/1497-drm-amd-display-Set-the-DML2-attribute-to-false-in-a.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/1499-drm-amd-display-Fix-DMUB-errors-introduced-by-DML2.patch
+	patches.suse/1500-drm-amdgpu-vpe-correct-queue-stop-programing.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
 	patches.suse/drm-amd-Disable-PP_PCIE_DPM_MASK-when-dynamic-speed-.patch
 	patches.suse/drm-amd-display-Reduce-default-backlight-min-from-5-.patch
