drm/amdgpu: enable RAS poison mode for APU (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14510,6 +14510,7 @@
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/1499-drm-amd-display-Fix-DMUB-errors-introduced-by-DML2.patch
 	patches.suse/1500-drm-amdgpu-vpe-correct-queue-stop-programing.patch
+	patches.suse/1501-drm-amdgpu-enable-RAS-poison-mode-for-APU.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
 	patches.suse/drm-amd-Disable-PP_PCIE_DPM_MASK-when-dynamic-speed-.patch
 	patches.suse/drm-amd-display-Reduce-default-backlight-min-from-5-.patch
