--- a/series.conf
+++ b/series.conf
@@ -14513,6 +14513,7 @@
 	patches.suse/1501-drm-amdgpu-enable-RAS-poison-mode-for-APU.patch
 	patches.suse/1502-drm-amdgpu-bypass-RAS-error-reset-in-some-conditions.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
+	patches.suse/1504-drm-amdkfd-Address-remap_list-not-described-in-svm_r.patch
 	patches.suse/drm-amd-Disable-PP_PCIE_DPM_MASK-when-dynamic-speed-.patch
 	patches.suse/drm-amd-display-Reduce-default-backlight-min-from-5-.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
