drm/amd/display: Add missing copyright notice in DMUB (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14515,6 +14515,7 @@
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
 	patches.suse/1504-drm-amdkfd-Address-remap_list-not-described-in-svm_r.patch
 	patches.suse/1505-drm-amdgpu-remove-restriction-of-sriov-max_pfn-on-Ve.patch
+	patches.suse/1506-drm-amd-display-Add-missing-copyright-notice-in-DMUB.patch
 	patches.suse/drm-amd-Disable-PP_PCIE_DPM_MASK-when-dynamic-speed-.patch
 	patches.suse/drm-amd-display-Reduce-default-backlight-min-from-5-.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
