--- a/series.conf
+++ b/series.conf
@@ -14516,6 +14516,7 @@
 	patches.suse/1504-drm-amdkfd-Address-remap_list-not-described-in-svm_r.patch
 	patches.suse/1505-drm-amdgpu-remove-restriction-of-sriov-max_pfn-on-Ve.patch
 	patches.suse/1506-drm-amd-display-Add-missing-copyright-notice-in-DMUB.patch
+	patches.suse/1507-drm-amd-display-Fix-copyright-notice-in-DML2-code.patch
 	patches.suse/drm-amd-Disable-PP_PCIE_DPM_MASK-when-dynamic-speed-.patch
 	patches.suse/drm-amd-display-Reduce-default-backlight-min-from-5-.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
