--- a/series.conf
+++ b/series.conf
@@ -14518,6 +14518,7 @@
 	patches.suse/1506-drm-amd-display-Add-missing-copyright-notice-in-DMUB.patch
 	patches.suse/1507-drm-amd-display-Fix-copyright-notice-in-DML2-code.patch
 	patches.suse/1508-drm-amd-display-Fix-copyright-notice-in-DC-code.patch
+	patches.suse/1509-Revert-drm-amdkfd-remove-unused-code.patch
 	patches.suse/drm-amd-Disable-PP_PCIE_DPM_MASK-when-dynamic-speed-.patch
 	patches.suse/drm-amd-display-Reduce-default-backlight-min-from-5-.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
