Revert "drm/amdkfd: Use partial migrations in GPU page faults" (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14519,6 +14519,7 @@
 	patches.suse/1507-drm-amd-display-Fix-copyright-notice-in-DML2-code.patch
 	patches.suse/1508-drm-amd-display-Fix-copyright-notice-in-DC-code.patch
 	patches.suse/1509-Revert-drm-amdkfd-remove-unused-code.patch
+	patches.suse/1510-Revert-drm-amdkfd-Use-partial-migrations-in-GPU-page.patch
 	patches.suse/drm-amd-Disable-PP_PCIE_DPM_MASK-when-dynamic-speed-.patch
 	patches.suse/drm-amd-display-Reduce-default-backlight-min-from-5-.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
