--- a/series.conf
+++ b/series.conf
@@ -16587,6 +16587,7 @@
 	patches.suse/idpf-avoid-compiler-padding-in-virtchnl2_ptype-struc.patch
 	patches.suse/nvme-rdma-Fix-transfer-length-when-write_generate-re.patch
 	patches.suse/nvme-use-ctrl-state-accessor.patch
+	patches.suse/nvme-auth-open-code-single-use-macros.patch
 	patches.suse/dm-limit-the-number-of-targets-and-parameter-size-ar.patch
 	patches.suse/iommu-Allow-ops-default_domain-to-work-when-CONFIG_IOMMU_DMA
 	patches.suse/drm-tegra-Do-not-assume-that-a-NULL-domain-means-no-DMA-IOMMU
