--- a/series.conf
+++ b/series.conf
@@ -16586,6 +16586,7 @@
 	patches.suse/msft-hv-2940-hv_netvsc-Fix-race-condition-between-netvsc_probe-an.patch
 	patches.suse/idpf-avoid-compiler-padding-in-virtchnl2_ptype-struc.patch
 	patches.suse/nvme-rdma-Fix-transfer-length-when-write_generate-re.patch
+	patches.suse/nvme-use-ctrl-state-accessor.patch
 	patches.suse/dm-limit-the-number-of-targets-and-parameter-size-ar.patch
 	patches.suse/iommu-Allow-ops-default_domain-to-work-when-CONFIG_IOMMU_DMA
 	patches.suse/drm-tegra-Do-not-assume-that-a-NULL-domain-means-no-DMA-IOMMU
