--- a/series.conf
+++ b/series.conf
@@ -14522,6 +14522,7 @@
 	patches.suse/1510-Revert-drm-amdkfd-Use-partial-migrations-in-GPU-page.patch
 	patches.suse/drm-amd-Disable-PP_PCIE_DPM_MASK-when-dynamic-speed-.patch
 	patches.suse/1512-drm-amd-Move-AMD_IS_APU-check-for-ASPM-into-top-leve.patch
+	patches.suse/1513-drm-amd-Explicitly-disable-ASPM-when-dynamic-switchi.patch
 	patches.suse/drm-amd-display-Reduce-default-backlight-min-from-5-.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
