drm/amd/display: Revert "Improve x86 and dmub ips handshake" (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14524,6 +14524,7 @@
 	patches.suse/1512-drm-amd-Move-AMD_IS_APU-check-for-ASPM-into-top-leve.patch
 	patches.suse/1513-drm-amd-Explicitly-disable-ASPM-when-dynamic-switchi.patch
 	patches.suse/1514-drm-amd-display-Fix-MST-Multi-Stream-Not-Lighting-Up.patch
+	patches.suse/1515-drm-amd-display-Revert-Improve-x86-and-dmub-ips-hand.patch
 	patches.suse/drm-amd-display-Reduce-default-backlight-min-from-5-.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
