--- a/series.conf
+++ b/series.conf
@@ -14525,6 +14525,7 @@
 	patches.suse/1513-drm-amd-Explicitly-disable-ASPM-when-dynamic-switchi.patch
 	patches.suse/1514-drm-amd-display-Fix-MST-Multi-Stream-Not-Lighting-Up.patch
 	patches.suse/1515-drm-amd-display-Revert-Improve-x86-and-dmub-ips-hand.patch
+	patches.suse/1516-drm-amd-display-Add-a-check-for-idle-power-optimizat.patch
 	patches.suse/drm-amd-display-Reduce-default-backlight-min-from-5-.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
