drm/amd/display: add pipe resource management callbacks to DML2 (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14528,6 +14528,7 @@
 	patches.suse/1516-drm-amd-display-Add-a-check-for-idle-power-optimizat.patch
 	patches.suse/1517-drm-amd-display-Update-SDP-VSC-colorimetry-from-DP-t.patch
 	patches.suse/drm-amd-display-Reduce-default-backlight-min-from-5-.patch
+	patches.suse/1519-drm-amd-display-add-pipe-resource-management-callbac.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
 	patches.suse/drm-amdgpu-Remove-unused-variables-from-amdgpu_show_.patch
