--- a/series.conf
+++ b/series.conf
@@ -14529,6 +14529,7 @@
 	patches.suse/1517-drm-amd-display-Update-SDP-VSC-colorimetry-from-DP-t.patch
 	patches.suse/drm-amd-display-Reduce-default-backlight-min-from-5-.patch
 	patches.suse/1519-drm-amd-display-add-pipe-resource-management-callbac.patch
+	patches.suse/1520-drm-amd-display-implement-map-dc-pipe-with-callback-.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
 	patches.suse/drm-amdgpu-Remove-unused-variables-from-amdgpu_show_.patch
