--- a/series.conf
+++ b/series.conf
@@ -14531,6 +14531,7 @@
 	patches.suse/1519-drm-amd-display-add-pipe-resource-management-callbac.patch
 	patches.suse/1520-drm-amd-display-implement-map-dc-pipe-with-callback-.patch
 	patches.suse/1521-drm-amd-display-Fix-IPS-handshake-for-idle-optimizat.patch
+	patches.suse/1522-drm-amd-display-Fix-HDMI-framepack-3D-test-issue.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
 	patches.suse/drm-amdgpu-Remove-unused-variables-from-amdgpu_show_.patch
