drm/amd/display: Revert "drm/amd/display: allow edp updates for (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14532,6 +14532,7 @@
 	patches.suse/1520-drm-amd-display-implement-map-dc-pipe-with-callback-.patch
 	patches.suse/1521-drm-amd-display-Fix-IPS-handshake-for-idle-optimizat.patch
 	patches.suse/1522-drm-amd-display-Fix-HDMI-framepack-3D-test-issue.patch
+	patches.suse/1523-drm-amd-display-Revert-drm-amd-display-allow-edp-upd.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
 	patches.suse/drm-amdgpu-Remove-unused-variables-from-amdgpu_show_.patch
