--- a/series.conf
+++ b/series.conf
@@ -14535,6 +14535,7 @@
 	patches.suse/1523-drm-amd-display-Revert-drm-amd-display-allow-edp-upd.patch
 	patches.suse/1524-drm-amd-display-Set-emulated-sink-type-to-HDMI-accor.patch
 	patches.suse/1525-drm-amd-display-Correct-enum-typo.patch
+	patches.suse/1526-drm-amd-display-Add-prefix-to-amdgpu-crtc-functions.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
 	patches.suse/drm-amdgpu-Remove-unused-variables-from-amdgpu_show_.patch
