drm/amd/display: fix num_ways overflow error (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14537,6 +14537,7 @@
 	patches.suse/1525-drm-amd-display-Correct-enum-typo.patch
 	patches.suse/1526-drm-amd-display-Add-prefix-to-amdgpu-crtc-functions.patch
 	patches.suse/1527-drm-amd-display-Add-prefix-for-plane-functions.patch
+	patches.suse/1528-drm-amd-display-fix-num_ways-overflow-error.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
 	patches.suse/drm-amdgpu-Remove-unused-variables-from-amdgpu_show_.patch
