--- a/series.conf
+++ b/series.conf
@@ -14539,6 +14539,7 @@
 	patches.suse/1527-drm-amd-display-Add-prefix-for-plane-functions.patch
 	patches.suse/1528-drm-amd-display-fix-num_ways-overflow-error.patch
 	patches.suse/1529-drm-amd-display-Update-FAMS-sequence-for-DCN30-DCN32.patch
+	patches.suse/1530-drm-amd-display-add-null-check-for-invalid-opps.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
 	patches.suse/drm-amdgpu-Remove-unused-variables-from-amdgpu_show_.patch
