drm/amd/display: Fix shaper using bad LUT params (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14540,6 +14540,7 @@
 	patches.suse/1528-drm-amd-display-fix-num_ways-overflow-error.patch
 	patches.suse/1529-drm-amd-display-Update-FAMS-sequence-for-DCN30-DCN32.patch
 	patches.suse/1530-drm-amd-display-add-null-check-for-invalid-opps.patch
+	patches.suse/1531-drm-amd-display-Fix-shaper-using-bad-LUT-params.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
 	patches.suse/drm-amdgpu-Remove-unused-variables-from-amdgpu_show_.patch
