--- a/series.conf
+++ b/series.conf
@@ -14545,6 +14545,7 @@
 	patches.suse/1533-drm-amd-display-Read-before-writing-Backlight-Mode-S.patch
 	patches.suse/1534-drm-amd-display-add-interface-to-query-SubVP-status.patch
 	patches.suse/1535-drm-amd-display-3.2.256.patch
+	patches.suse/1536-drm-amdgpu-Use-discovery-table-s-subrevision.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
 	patches.suse/drm-amdgpu-Remove-unused-variables-from-amdgpu_show_.patch
