--- a/series.conf
+++ b/series.conf
@@ -14548,6 +14548,7 @@
 	patches.suse/1536-drm-amdgpu-Use-discovery-table-s-subrevision.patch
 	patches.suse/1537-drm-amdgpu-get-RAS-poison-status-from-DF-v4_6_2.patch
 	patches.suse/1538-drm-amd-pm-call-smu_cmn_get_smc_version-in-is_mode1_.patch
+	patches.suse/1539-drm-amdgpu-Add-a-read-to-GFX-v9.4.3-ring-test.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
 	patches.suse/drm-amdgpu-Remove-unused-variables-from-amdgpu_show_.patch
