drm/amdgpu: Use pcie domain of xcc acpi objects (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14550,6 +14550,7 @@
 	patches.suse/1538-drm-amd-pm-call-smu_cmn_get_smc_version-in-is_mode1_.patch
 	patches.suse/1539-drm-amdgpu-Add-a-read-to-GFX-v9.4.3-ring-test.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
+	patches.suse/1541-drm-amdgpu-Use-pcie-domain-of-xcc-acpi-objects.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
 	patches.suse/drm-amdgpu-Remove-unused-variables-from-amdgpu_show_.patch
 	patches.suse/perf-arm_cspmu-Separate-Arm-and-vendor-module.patch
