--- a/series.conf
+++ b/series.conf
@@ -14551,6 +14551,7 @@
 	patches.suse/1539-drm-amdgpu-Add-a-read-to-GFX-v9.4.3-ring-test.patch
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
 	patches.suse/1541-drm-amdgpu-Use-pcie-domain-of-xcc-acpi-objects.patch
+	patches.suse/1542-drm-amd-amdgpu-fix-the-GPU-power-print-error-in-pm-i.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
 	patches.suse/drm-amdgpu-Remove-unused-variables-from-amdgpu_show_.patch
 	patches.suse/perf-arm_cspmu-Separate-Arm-and-vendor-module.patch
