--- a/series.conf
+++ b/series.conf
@@ -14554,6 +14554,7 @@
 	patches.suse/1542-drm-amd-amdgpu-fix-the-GPU-power-print-error-in-pm-i.patch
 	patches.suse/1543-drm-amdxcp-fix-amdxcp-unloads-incompletely.patch
 	patches.suse/1544-drm-amd-display-fix-S-G-display-enablement.patch
+	patches.suse/1545-drm-amdgpu-Fix-typo-in-IP-discovery-parsing.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
 	patches.suse/drm-amdgpu-Remove-unused-variables-from-amdgpu_show_.patch
 	patches.suse/perf-arm_cspmu-Separate-Arm-and-vendor-module.patch
