drm/amdgpu: Identify data parity error corrected in replay mode (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -14555,6 +14555,7 @@
 	patches.suse/1543-drm-amdxcp-fix-amdxcp-unloads-incompletely.patch
 	patches.suse/1544-drm-amd-display-fix-S-G-display-enablement.patch
 	patches.suse/1545-drm-amdgpu-Fix-typo-in-IP-discovery-parsing.patch
+	patches.suse/1546-drm-amdgpu-Identify-data-parity-error-corrected-in-r.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
 	patches.suse/drm-amdgpu-Remove-unused-variables-from-amdgpu_show_.patch
 	patches.suse/perf-arm_cspmu-Separate-Arm-and-vendor-module.patch
