--- a/series.conf
+++ b/series.conf
@@ -14556,6 +14556,7 @@
 	patches.suse/1544-drm-amd-display-fix-S-G-display-enablement.patch
 	patches.suse/1545-drm-amdgpu-Fix-typo-in-IP-discovery-parsing.patch
 	patches.suse/1546-drm-amdgpu-Identify-data-parity-error-corrected-in-r.patch
+	patches.suse/1547-drm-amdgpu-Retrieve-CE-count-from-ce_count_lo_chip-i.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
 	patches.suse/drm-amdgpu-Remove-unused-variables-from-amdgpu_show_.patch
 	patches.suse/perf-arm_cspmu-Separate-Arm-and-vendor-module.patch
