--- a/series.conf
+++ b/series.conf
@@ -14558,6 +14558,7 @@
 	patches.suse/1546-drm-amdgpu-Identify-data-parity-error-corrected-in-r.patch
 	patches.suse/1547-drm-amdgpu-Retrieve-CE-count-from-ce_count_lo_chip-i.patch
 	patches.suse/1548-drm-amdgpu-Add-EXT_COHERENT-support-for-APU-and-NUMA.patch
+	patches.suse/1549-drm-amd-amdgpu-avoid-to-disable-gfxhub-interrupt-whe.patch
 	patches.suse/drm-amdgpu-Remove-duplicate-fdinfo-fields.patch
 	patches.suse/drm-amdgpu-Remove-unused-variables-from-amdgpu_show_.patch
 	patches.suse/perf-arm_cspmu-Separate-Arm-and-vendor-module.patch
