--- a/series.conf
+++ b/series.conf
@@ -14851,6 +14851,7 @@
 	patches.suse/PCI-Lengthen-reset-delay-for-VideoPropulsion-Torrent.patch
 	patches.suse/0002-PCI-Add-pci_is_vga-helper.patch
 	patches.suse/1558-drm-virtio-Use-pci_is_vga-to-identify-VGA-devices.patch
+	patches.suse/1559-drm-qxl-Use-pci_is_vga-to-identify-VGA-devices.patch
 	patches.suse/PCI-dwc-Add-host_post_init-callback.patch
 	patches.suse/PCI-qcom-Enable-ASPM-for-platforms-supporting-1.9.0-.patch
 	patches.suse/PCI-qcom-ep-Add-dedicated-callback-for-writing-to-DB.patch
