--- a/series.conf
+++ b/series.conf
@@ -15354,6 +15354,7 @@
 	patches.suse/s390-cmma-fix-handling-of-swapper_pg_dir-and-invalid_pg_dir.patch
 	patches.suse/misc-st_core-Do-not-call-kfree_skb-under-spin_lock_i.patch
 	patches.suse/1561-mei-fix-doc-typos.patch
+	patches.suse/1562-mei-bus-add-send-and-recv-api-with-timeout.patch
 	patches.suse/iio-frequency-adf4350-Use-device-managed-functions-a.patch
 	patches.suse/iio-adc-stm32-adc-harden-against-NULL-pointer-deref-.patch
 	patches.suse/tools-iio-iio_generic_buffer-ensure-alignment.patch
