--- a/series.conf
+++ b/series.conf
@@ -15356,6 +15356,7 @@
 	patches.suse/1561-mei-fix-doc-typos.patch
 	patches.suse/1562-mei-bus-add-send-and-recv-api-with-timeout.patch
 	patches.suse/1563-mei-pxp-recover-from-recv-fail-under-memory-pressure.patch
+	patches.suse/1564-mei-pxp-re-enable-client-on-errors.patch
 	patches.suse/iio-frequency-adf4350-Use-device-managed-functions-a.patch
 	patches.suse/iio-adc-stm32-adc-harden-against-NULL-pointer-deref-.patch
 	patches.suse/tools-iio-iio_generic_buffer-ensure-alignment.patch
