mei: update mei-pxp's component interface with timeouts (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -15357,6 +15357,7 @@
 	patches.suse/1562-mei-bus-add-send-and-recv-api-with-timeout.patch
 	patches.suse/1563-mei-pxp-recover-from-recv-fail-under-memory-pressure.patch
 	patches.suse/1564-mei-pxp-re-enable-client-on-errors.patch
+	patches.suse/1565-mei-update-mei-pxp-s-component-interface-with-timeou.patch
 	patches.suse/iio-frequency-adf4350-Use-device-managed-functions-a.patch
 	patches.suse/iio-adc-stm32-adc-harden-against-NULL-pointer-deref-.patch
 	patches.suse/tools-iio-iio_generic_buffer-ensure-alignment.patch
