misc: mei: hw.h: fix kernel-doc warnings (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -15361,6 +15361,7 @@
 	patches.suse/1566-mei-docs-use-correct-structures-name-in-kdoc.patch
 	patches.suse/1567-mei-docs-add-missing-entries-to-kdoc-in-struct-mei_c.patch
 	patches.suse/1568-mei-docs-fix-spelling-errors.patch
+	patches.suse/1569-misc-mei-hw.h-fix-kernel-doc-warnings.patch
 	patches.suse/iio-frequency-adf4350-Use-device-managed-functions-a.patch
 	patches.suse/iio-adc-stm32-adc-harden-against-NULL-pointer-deref-.patch
 	patches.suse/tools-iio-iio_generic_buffer-ensure-alignment.patch
