--- a/series.conf
+++ b/series.conf
@@ -15363,6 +15363,7 @@
 	patches.suse/1568-mei-docs-fix-spelling-errors.patch
 	patches.suse/1569-misc-mei-hw.h-fix-kernel-doc-warnings.patch
 	patches.suse/1570-misc-mei-client.c-fix-kernel-doc-warnings.patch
+	patches.suse/1571-misc-mei-dma-ring.c-fix-kernel-doc-warnings.patch
 	patches.suse/iio-frequency-adf4350-Use-device-managed-functions-a.patch
 	patches.suse/iio-adc-stm32-adc-harden-against-NULL-pointer-deref-.patch
 	patches.suse/tools-iio-iio_generic_buffer-ensure-alignment.patch
