--- a/series.conf
+++ b/series.conf
@@ -15387,6 +15387,7 @@
 	patches.suse/dt-bindings-serial-fix-regex-pattern-for-matching-se.patch
 	patches.suse/tty-sysrq-replace-smp_processor_id-with-get_cpu.patch
 	patches.suse/tty-serial-meson-fix-hard-LOCKUP-on-crtscts-mode.patch
+	patches.suse/1577-vgacon-rework-Kconfig-dependencies.patch
 	patches.suse/vga16fb-drop-powerpc-support.patch
 	patches.suse/tty-serial-samsung_tty-remove-dead-code.patch
 	patches.suse/dt-bindings-serial-rs485-Add-rs485-rts-active-high.patch
