--- a/series.conf
+++ b/series.conf
@@ -15388,6 +15388,7 @@
 	patches.suse/tty-sysrq-replace-smp_processor_id-with-get_cpu.patch
 	patches.suse/tty-serial-meson-fix-hard-LOCKUP-on-crtscts-mode.patch
 	patches.suse/1577-vgacon-rework-Kconfig-dependencies.patch
+	patches.suse/1578-dummycon-limit-Arm-console-size-hack-to-footbridge.patch
 	patches.suse/vga16fb-drop-powerpc-support.patch
 	patches.suse/tty-serial-samsung_tty-remove-dead-code.patch
 	patches.suse/dt-bindings-serial-rs485-Add-rs485-rts-active-high.patch
