vgacon: remove screen_info dependency (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -15389,6 +15389,7 @@
 	patches.suse/tty-serial-meson-fix-hard-LOCKUP-on-crtscts-mode.patch
 	patches.suse/1577-vgacon-rework-Kconfig-dependencies.patch
 	patches.suse/1578-dummycon-limit-Arm-console-size-hack-to-footbridge.patch
+	patches.suse/1579-vgacon-remove-screen_info-dependency.patch
 	patches.suse/vga16fb-drop-powerpc-support.patch
 	patches.suse/tty-serial-samsung_tty-remove-dead-code.patch
 	patches.suse/dt-bindings-serial-rs485-Add-rs485-rts-active-high.patch
