--- a/series.conf
+++ b/series.conf
@@ -15478,6 +15478,7 @@
 	patches.suse/9p-v9fs_listxattr-fix-s-null-argument-warning.patch
 	patches.suse/9p-net-fix-possible-memory-leak-in-p9_check_errors.patch
 	patches.suse/1582-drm-nouveau-mmu-tu102-remove-write-to-0x100e68-durin.patch
+	patches.suse/1583-drm-nouveau-nvkm-bump-maximum-number-of-NVDEC.patch
 	patches.suse/mtd-cfi_cmdset_0001-Byte-swap-OTP-info.patch
 	patches.suse/mtd-rawnand-tegra-add-missing-check-for-platform_get.patch
 	patches.suse/mtd-rawnand-arasan-Include-ECC-syndrome-along-with-i.patch
