drm/nouveau/gsp: prepare for GSP-RM (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -15480,6 +15480,7 @@
 	patches.suse/1582-drm-nouveau-mmu-tu102-remove-write-to-0x100e68-durin.patch
 	patches.suse/1583-drm-nouveau-nvkm-bump-maximum-number-of-NVDEC.patch
 	patches.suse/1584-drm-nouveau-nvkm-bump-maximum-number-of-NVJPG.patch
+	patches.suse/1585-drm-nouveau-gsp-prepare-for-GSP-RM.patch
 	patches.suse/mtd-cfi_cmdset_0001-Byte-swap-OTP-info.patch
 	patches.suse/mtd-rawnand-tegra-add-missing-check-for-platform_get.patch
 	patches.suse/mtd-rawnand-arasan-Include-ECC-syndrome-along-with-i.patch
