--- a/series.conf
+++ b/series.conf
@@ -15483,6 +15483,7 @@
 	patches.suse/1585-drm-nouveau-gsp-prepare-for-GSP-RM.patch
 	patches.suse/1586-drm-nouveau-acr-tu102-prepare-for-GSP-RM.patch
 	patches.suse/1587-drm-nouveau-bar-tu102-prepare-for-GSP-RM.patch
+	patches.suse/1588-drm-nouveau-bus-tu102-prepare-for-GSP-RM.patch
 	patches.suse/mtd-cfi_cmdset_0001-Byte-swap-OTP-info.patch
 	patches.suse/mtd-rawnand-tegra-add-missing-check-for-platform_get.patch
 	patches.suse/mtd-rawnand-arasan-Include-ECC-syndrome-along-with-i.patch
