drm/nouveau/fuse/tu102-: prepare for GSP-RM (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071)

--- a/series.conf
+++ b/series.conf
@@ -15487,6 +15487,7 @@
 	patches.suse/1589-drm-nouveau-devinit-tu102-prepare-for-GSP-RM.patch
 	patches.suse/1590-drm-nouveau-fault-tu102-prepare-for-GSP-RM.patch
 	patches.suse/1591-drm-nouveau-fb-tu102-prepare-for-GSP-RM.patch
+	patches.suse/1592-drm-nouveau-fuse-tu102-prepare-for-GSP-RM.patch
 	patches.suse/mtd-cfi_cmdset_0001-Byte-swap-OTP-info.patch
 	patches.suse/mtd-rawnand-tegra-add-missing-check-for-platform_get.patch
 	patches.suse/mtd-rawnand-arasan-Include-ECC-syndrome-along-with-i.patch
