--- a/series.conf
+++ b/series.conf
@@ -55845,6 +55845,7 @@
 	patches.suse/KVM-x86-emulator-Defer-not-present-segment-check-in-.patch
 	patches.suse/KVM-s390x-fix-SCK-locking
 	patches.suse/KVM-x86-add-support-for-CPUID-leaf-0x80000021.patch
+	patches.suse/KVM-x86-synthesize-CPUID-leaf-0x80000021h-if-useful.patch
 	patches.suse/msft-hv-2551-x86-hyperv-Output-host-build-info-as-normal-Windows-.patch
 	patches.suse/ionic-fix-type-complaint-in-ionic_dev_cmd_clean.patch
 	patches.suse/ionic-start-watchdog-after-all-is-setup.patch
