KVM: x86: Move open-coded CPUID leaf 0x80000021 EAX bit propagation  code (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -58532,6 +58532,7 @@
 	patches.suse/clocksource-Suspend-the-watchdog-temporarily-when-hi.patch
 	patches.suse/uaccess-Add-speculation-barrier-to-copy_from_user.patch
 	patches.suse/x86-cpu-kvm-add-support-for-cpuid_80000021_eax.patch
+	patches.suse/KVM-x86-Move-open-coded-CPUID-leaf-0x80000021-EAX-bit-prop.patch
 	patches.suse/net-sched-act_mirred-better-wording-on-protection-ag.patch
 	patches.suse/act_mirred-use-the-backlog-for-nested-calls-to-mirre.patch
 	patches.suse/net-add-sock_init_data_uid.patch
