--- a/series.conf
+++ b/series.conf
@@ -15827,6 +15827,7 @@
 	patches.suse/scsi-mpt3sas-Remove-the-iounit_pg8-member-of-the-per.patch
 	patches.suse/scsi-mpt3sas-Fix-an-outdated-comment.patch
 	patches.suse/scsi-mpt3sas-Fix-typo-of-TRIGGER.patch
+	patches.suse/scsi-mpt3sas-Replace-a-dynamic-allocation-with-a-loc.patch
 	patches.suse/scsi-lpfc-Correct-maximum-PCI-function-value-for-RAS.patch
 	patches.suse/scsi-lpfc-Fix-possible-file-string-name-overflow-whe.patch
 	patches.suse/scsi-lpfc-Fix-list_entry-null-check-warning-in-lpfc_.patch
