--- a/series.conf
+++ b/series.conf
@@ -15838,6 +15838,7 @@
 	patches.suse/scsi-lpfc-Enhance-driver-logging-for-selected-discov.patch
 	patches.suse/scsi-lpfc-Update-lpfc-version-to-14.2.0.16.patch
 	patches.suse/scsi-lpfc-Copyright-updates-for-14.2.0.16-patches.patch
+	patches.suse/scsi-mpt3sas-Suppress-a-warning-in-debug-kernel.patch
 	patches.suse/scsi-mpi3mr-Add-support-for-SAS5116-PCI-IDs.patch
 	patches.suse/scsi-mpi3mr-Add-PCI-checks-where-SAS5116-diverges-from-SAS4116.patch
 	patches.suse/scsi-mpi3mr-Increase-maximum-number-of-PHYs-to-64-from-32.patch
