scsi: mpt3sas: Reload SBR without rebooting HBA (bsc#1219551).

--- a/series.conf
+++ b/series.conf
@@ -16704,6 +16704,9 @@
 	patches.suse/nvme-host-fix-the-updating-of-the-firmware-version.patch
 	patches.suse/x86-Kconfig-Transmeta-Crusoe-is-CPU-family-5-not-6.patch
 
+	# jejb/scsi for-next
+	patches.suse/scsi-mpt3sas-Reload-SBR-without-rebooting-HBA.patch
+
 	# powerpc/linux fixes
 	patches.suse/powerpc-pseries-papr-sysparm-use-u8-arrays-for-paylo.patch
 
