scsi: mpt3sas: Use flexible arrays when obviously possible (bsc#1219551).

--- a/series.conf
+++ b/series.conf
@@ -15817,6 +15817,7 @@
 	patches.suse/block-reject-invalid-operation-in-submit_bio_noacct.patch
 	patches.suse/blk-wbt-remove-the-separate-write-cache-tracking.patch
 	patches.suse/blk-cgroup-fix-rcu-lockdep-warning-in-blkg_lookup.patch
+	patches.suse/scsi-mpt3sas-Use-flexible-arrays-when-obviously-poss.patch
 	patches.suse/scsi-lpfc-Correct-maximum-PCI-function-value-for-RAS.patch
 	patches.suse/scsi-lpfc-Fix-possible-file-string-name-overflow-whe.patch
 	patches.suse/scsi-lpfc-Fix-list_entry-null-check-warning-in-lpfc_.patch
