--- a/series.conf
+++ b/series.conf
@@ -15820,6 +15820,7 @@
 	patches.suse/scsi-mpt3sas-Use-flexible-arrays-when-obviously-poss.patch
 	patches.suse/scsi-mpt3sas-Make-MPI2_CONFIG_PAGE_IO_UNIT_8-Sensor-.patch
 	patches.suse/scsi-mpt3sas-Make-MPI2_CONFIG_PAGE_RAID_VOL_0-PhysDi.patch
+	patches.suse/scsi-mpt3sas-Make-MPI2_CONFIG_PAGE_SASIOUNIT_0-PhyDa.patch
 	patches.suse/scsi-lpfc-Correct-maximum-PCI-function-value-for-RAS.patch
 	patches.suse/scsi-lpfc-Fix-possible-file-string-name-overflow-whe.patch
 	patches.suse/scsi-lpfc-Fix-list_entry-null-check-warning-in-lpfc_.patch
