scsi: mpt3sas: Remove the iounit_pg8 member of the per-adapter struct (bsc#1219551).

--- a/series.conf
+++ b/series.conf
@@ -15824,6 +15824,7 @@
 	patches.suse/scsi-mpt3sas-Make-MPI2_CONFIG_PAGE_SASIOUNIT_1-PhyDa.patch
 	patches.suse/scsi-mpt3sas-Make-MPI26_CONFIG_PAGE_PIOUNIT_1-PhyDat.patch
 	patches.suse/scsi-mpt3sas-Use-struct_size-for-struct-size-calcula.patch
+	patches.suse/scsi-mpt3sas-Remove-the-iounit_pg8-member-of-the-per.patch
 	patches.suse/scsi-lpfc-Correct-maximum-PCI-function-value-for-RAS.patch
 	patches.suse/scsi-lpfc-Fix-possible-file-string-name-overflow-whe.patch
 	patches.suse/scsi-lpfc-Fix-list_entry-null-check-warning-in-lpfc_.patch
