drm/ci: clean up xfails (specially flakes list) (jsc#PED-3527 jsc#PED-5475 jsc#PED-6068 jsc#PED-6070 jsc#PED-6116 jsc#PED-6120 jsc#PED-5065 jsc#PED-5477 jsc#PED-5511 jsc#PED-6041 jsc#PED-6069 jsc#PED-6071).

--- a/series.conf
+++ b/series.conf
@@ -14488,6 +14488,7 @@
 	patches.suse/1476-drm-ci-fix-DEBIAN_ARCH-and-get-amdgpu-probing.patch
 	patches.suse/1477-drm-ci-add-helper-script-update-xfails.py.patch
 	patches.suse/1478-drm-ci-uprev-IGT-and-make-sure-core_getversion-is-ru.patch
+	patches.suse/1479-drm-ci-clean-up-xfails-specially-flakes-list.patch
 	patches.suse/drm-amdkfd-Fix-shift-out-of-bounds-issue.patch
 	patches.suse/drm-amd-display-Remove-power-sequencing-check.patch
 	patches.suse/drm-amdgpu-Fix-a-null-pointer-access-when-the-smc_rr.patch
