scsi: smartpqi: Bump driver version to 2.1.26-030 (bsc#1219987).

--- a/series.conf
+++ b/series.conf
@@ -16495,6 +16495,7 @@
 	patches.suse/perf-db-export-Fix-missing-reference-count-get-in-call_path_from_sample.patch
 	patches.suse/scsi-smartpqi-Add-new-controller-PCI-IDs-c6d5aa44.patch
 	patches.suse/scsi-smartpqi-Fix-logical-volume-rescan-race-conditi.patch
+	patches.suse/scsi-smartpqi-Bump-driver-version-to-2.1.26-030.patch
 	patches.suse/scsi-fnic-unlock-on-error-path-in-fnic_queuecommand.patch
 	patches.suse/dmaengine-fix-NULL-pointer-in-channel-unregistration.patch
 	patches.suse/dmaengine-idxd-Move-dma_free_coherent-out-of-spinloc.patch
