--- a/series.conf
+++ b/series.conf
@@ -16494,6 +16494,7 @@
 	patches.suse/libsubcmd-Fix-memory-leak-in-uniq.patch
 	patches.suse/perf-db-export-Fix-missing-reference-count-get-in-call_path_from_sample.patch
 	patches.suse/scsi-smartpqi-Add-new-controller-PCI-IDs-c6d5aa44.patch
+	patches.suse/scsi-smartpqi-Fix-logical-volume-rescan-race-conditi.patch
 	patches.suse/scsi-fnic-unlock-on-error-path-in-fnic_queuecommand.patch
 	patches.suse/dmaengine-fix-NULL-pointer-in-channel-unregistration.patch
 	patches.suse/dmaengine-idxd-Move-dma_free_coherent-out-of-spinloc.patch
