xfs: factor out xfs_defer_pending_abort (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3601,6 +3601,7 @@
 	patches.kernel.org/6.6.17-024-xfs-introduce-protection-for-drop-nlink.patch
 	patches.kernel.org/6.6.17-025-xfs-handle-nimaps-0-from-xfs_bmapi_write-in-xf.patch
 	patches.kernel.org/6.6.17-026-xfs-allow-read-IO-and-FICLONE-to-run-concurren.patch
+	patches.kernel.org/6.6.17-027-xfs-factor-out-xfs_defer_pending_abort.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
