--- a/series.conf
+++ b/series.conf
@@ -3653,6 +3653,7 @@
 	patches.kernel.org/6.6.17-076-netfilter-nft_compat-restrict-match-target-pro.patch
 	patches.kernel.org/6.6.17-077-drm-amd-display-Fix-panel_cntl-could-be-null-i.patch
 	patches.kernel.org/6.6.17-078-drm-amd-display-Add-NULL-test-for-timing-gener.patch
+	patches.kernel.org/6.6.17-079-drm-amd-display-Implement-bounds-check-for-str.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
