ppp_async: limit MRU to 64K (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3646,6 +3646,7 @@
 	patches.kernel.org/6.6.17-069-selftests-net-let-big_tcp-test-cope-with-slow-.patch
 	patches.kernel.org/6.6.17-070-tipc-Check-the-bearer-type-before-calling-tipc.patch
 	patches.kernel.org/6.6.17-071-af_unix-Call-kfree_skb-for-dead-unix_-sk-oob_s.patch
+	patches.kernel.org/6.6.17-072-ppp_async-limit-MRU-to-64K.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
