riscv: Flush the tlb when a page directory is freed (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3667,6 +3667,7 @@
 	patches.kernel.org/6.6.17-090-riscv-Fix-set_huge_pte_at-for-NAPOT-mapping.patch
 	patches.kernel.org/6.6.17-091-riscv-Fix-hugetlb_mask_last_page-when-NAPOT-is.patch
 	patches.kernel.org/6.6.17-092-scsi-core-Move-scsi_host_busy-out-of-host-lock.patch
+	patches.kernel.org/6.6.17-093-riscv-Flush-the-tlb-when-a-page-directory-is-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
