media: solo6x10: replace max(a, min(b, c)) by clamp(b, a, c) (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3690,6 +3690,7 @@
 	patches.kernel.org/6.6.17-113-Input-i8042-fix-strange-behavior-of-touchpad-o.patch
 	patches.kernel.org/6.6.17-114-Input-atkbd-skip-ATKBD_CMD_SETLEDS-when-skippi.patch
 	patches.kernel.org/6.6.17-115-Revert-ASoC-amd-Add-new-dmi-entries-for-acp5x-.patch
+	patches.kernel.org/6.6.17-116-media-solo6x10-replace-max-a-min-b-c-by-clamp-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
