xfs: only remap the written blocks in xfs_reflink_end_cow_extent (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3603,6 +3603,7 @@
 	patches.kernel.org/6.6.17-026-xfs-allow-read-IO-and-FICLONE-to-run-concurren.patch
 	patches.kernel.org/6.6.17-027-xfs-factor-out-xfs_defer_pending_abort.patch
 	patches.kernel.org/6.6.17-028-xfs-abort-intent-items-when-recovery-intents-f.patch
+	patches.kernel.org/6.6.17-029-xfs-only-remap-the-written-blocks-in-xfs_refli.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
