riscv: Fix arch_hugetlb_migration_supported() for NAPOT (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3670,6 +3670,7 @@
 	patches.kernel.org/6.6.17-093-riscv-Flush-the-tlb-when-a-page-directory-is-f.patch
 	patches.kernel.org/6.6.17-094-libceph-rename-read_sparse_msg_-to-read_partia.patch
 	patches.kernel.org/6.6.17-095-libceph-just-wait-for-more-data-to-be-availabl.patch
+	patches.kernel.org/6.6.17-096-riscv-Fix-arch_hugetlb_migration_supported-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
