--- a/series.conf
+++ b/series.conf
@@ -3651,6 +3651,7 @@
 	patches.kernel.org/6.6.17-074-netfilter-nft_compat-narrow-down-revision-to-u.patch
 	patches.kernel.org/6.6.17-075-netfilter-nft_compat-reject-unused-compat-flag.patch
 	patches.kernel.org/6.6.17-076-netfilter-nft_compat-restrict-match-target-pro.patch
+	patches.kernel.org/6.6.17-077-drm-amd-display-Fix-panel_cntl-could-be-null-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
