xfs: fix again select in kconfig XFS_ONLINE_SCRUB_STATS (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3606,6 +3606,7 @@
 	patches.kernel.org/6.6.17-029-xfs-only-remap-the-written-blocks-in-xfs_refli.patch
 	patches.kernel.org/6.6.17-030-xfs-up-ic_sema-if-flushing-data-device-fails.patch
 	patches.kernel.org/6.6.17-031-xfs-fix-internal-error-from-AGFL-exhaustion.patch
+	patches.kernel.org/6.6.17-032-xfs-fix-again-select-in-kconfig-XFS_ONLINE_SCR.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
