xfs: respect the stable writes flag on the RT device (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3611,6 +3611,7 @@
 	patches.kernel.org/6.6.17-034-xfs-clean-up-dqblk-extraction.patch
 	patches.kernel.org/6.6.17-035-xfs-dquot-recovery-does-not-validate-the-recov.patch
 	patches.kernel.org/6.6.17-036-xfs-clean-up-FS_XFLAG_REALTIME-handling-in-xfs.patch
+	patches.kernel.org/6.6.17-037-xfs-respect-the-stable-writes-flag-on-the-RT-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
