--- a/series.conf
+++ b/series.conf
@@ -3673,6 +3673,7 @@
 	patches.kernel.org/6.6.17-096-riscv-Fix-arch_hugetlb_migration_supported-for.patch
 	patches.kernel.org/6.6.17-097-riscv-declare-overflow_stack-as-exported-from-.patch
 	patches.kernel.org/6.6.17-098-blk-iocost-Fix-an-UBSAN-shift-out-of-bounds-wa.patch
+	patches.kernel.org/6.6.17-099-ALSA-usb-audio-Add-delay-quirk-for-MOTU-M-Seri.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
