Revert "usb: typec: tcpm: fix cc role at port reset" (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3679,6 +3679,7 @@
 	patches.kernel.org/6.6.17-102-USB-serial-qcserial-add-new-usb-id-for-Dell-Wi.patch
 	patches.kernel.org/6.6.17-103-USB-serial-option-add-Fibocom-FM101-GL-variant.patch
 	patches.kernel.org/6.6.17-104-USB-serial-cp210x-add-ID-for-IMST-iM871A-USB.patch
+	patches.kernel.org/6.6.17-105-Revert-usb-typec-tcpm-fix-cc-role-at-port-rese.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
