cifs: failure to add channel on iface should bump up weight (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3585,6 +3585,7 @@
 	patches.kernel.org/6.6.17-008-dmaengine-fix-is_slave_direction-return-false-.patch
 	patches.kernel.org/6.6.17-009-phy-ti-phy-omap-usb2-Fix-NULL-pointer-derefere.patch
 	patches.kernel.org/6.6.17-010-cifs-avoid-redundant-calls-to-disable-multicha.patch
+	patches.kernel.org/6.6.17-011-cifs-failure-to-add-channel-on-iface-should-bu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
