--- a/series.conf
+++ b/series.conf
@@ -3616,6 +3616,7 @@
 	patches.kernel.org/6.6.17-039-drm-msm-dp-return-correct-Colorimetry-for-DP_T.patch
 	patches.kernel.org/6.6.17-040-drm-msm-dpu-check-for-valid-hw_pp-in-dpu_encod.patch
 	patches.kernel.org/6.6.17-041-x86-efistub-Give-up-if-memory-attribute-protoc.patch
+	patches.kernel.org/6.6.17-042-x86-efistub-Avoid-placing-the-kernel-below-LOA.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
