--- a/series.conf
+++ b/series.conf
@@ -3609,6 +3609,7 @@
 	patches.kernel.org/6.6.17-032-xfs-fix-again-select-in-kconfig-XFS_ONLINE_SCR.patch
 	patches.kernel.org/6.6.17-033-xfs-inode-recovery-does-not-validate-the-recov.patch
 	patches.kernel.org/6.6.17-034-xfs-clean-up-dqblk-extraction.patch
+	patches.kernel.org/6.6.17-035-xfs-dquot-recovery-does-not-validate-the-recov.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
