--- a/series.conf
+++ b/series.conf
@@ -3657,6 +3657,7 @@
 	patches.kernel.org/6.6.17-080-netfilter-nft_ct-reject-direction-for-ct-id.patch
 	patches.kernel.org/6.6.17-081-netfilter-nft_set_pipapo-store-index-in-scratc.patch
 	patches.kernel.org/6.6.17-082-netfilter-nft_set_pipapo-add-helper-to-release.patch
+	patches.kernel.org/6.6.17-083-netfilter-nft_set_pipapo-remove-scratch_aligne.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
