selftests/net: convert unicast_extensions.sh to run it in unique namespace (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3625,6 +3625,7 @@
 	patches.kernel.org/6.6.17-048-netdevsim-avoid-potential-loop-in-nsim_dev_tra.patch
 	patches.kernel.org/6.6.17-049-net-atlantic-Fix-DMA-mapping-for-PTP-hwts-ring.patch
 	patches.kernel.org/6.6.17-050-selftests-net-cut-more-slack-for-gro-fwd-tests.patch
+	patches.kernel.org/6.6.17-051-selftests-net-convert-unicast_extensions.sh-to.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
