--- a/series.conf
+++ b/series.conf
@@ -3610,6 +3610,7 @@
 	patches.kernel.org/6.6.17-033-xfs-inode-recovery-does-not-validate-the-recov.patch
 	patches.kernel.org/6.6.17-034-xfs-clean-up-dqblk-extraction.patch
 	patches.kernel.org/6.6.17-035-xfs-dquot-recovery-does-not-validate-the-recov.patch
+	patches.kernel.org/6.6.17-036-xfs-clean-up-FS_XFLAG_REALTIME-handling-in-xfs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
