ALSA: usb-audio: Sort quirk table entries (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3697,6 +3697,7 @@
 	patches.kernel.org/6.6.17-120-io_uring-poll-add-requeue-return-code-from-pol.patch
 	patches.kernel.org/6.6.17-121-io_uring-net-limit-inline-multishot-retries.patch
 	patches.kernel.org/6.6.17-122-net-stmmac-xgmac-use-define-for-string-constan.patch
+	patches.kernel.org/6.6.17-123-ALSA-usb-audio-Sort-quirk-table-entries.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
