--- a/series.conf
+++ b/series.conf
@@ -3649,6 +3649,7 @@
 	patches.kernel.org/6.6.17-072-ppp_async-limit-MRU-to-64K.patch
 	patches.kernel.org/6.6.17-073-selftests-cmsg_ipv6-repeat-the-exact-packet.patch
 	patches.kernel.org/6.6.17-074-netfilter-nft_compat-narrow-down-revision-to-u.patch
+	patches.kernel.org/6.6.17-075-netfilter-nft_compat-reject-unused-compat-flag.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
