drm/msms/dp: fixed link clock divider bits be over written in BPC unknown case (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3612,6 +3612,7 @@
 	patches.kernel.org/6.6.17-035-xfs-dquot-recovery-does-not-validate-the-recov.patch
 	patches.kernel.org/6.6.17-036-xfs-clean-up-FS_XFLAG_REALTIME-handling-in-xfs.patch
 	patches.kernel.org/6.6.17-037-xfs-respect-the-stable-writes-flag-on-the-RT-d.patch
+	patches.kernel.org/6.6.17-038-drm-msms-dp-fixed-link-clock-divider-bits-be-o.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
