xhci: handle isoc Babble and Buffer Overrun events properly (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3684,6 +3684,7 @@
 	patches.kernel.org/6.6.17-107-usb-dwc3-host-Set-XHCI_SG_TRB_CACHE_SIZE_QUIRK.patch
 	patches.kernel.org/6.6.17-108-usb-host-xhci-plat-Add-support-for-XHCI_SG_TRB.patch
 	patches.kernel.org/6.6.17-109-xhci-process-isoc-TD-properly-when-there-was-a.patch
+	patches.kernel.org/6.6.17-110-xhci-handle-isoc-Babble-and-Buffer-Overrun-eve.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
