--- a/series.conf
+++ b/series.conf
@@ -3640,6 +3640,7 @@
 	patches.kernel.org/6.6.17-063-inet-read-sk-sk_family-once-in-inet_recv_error.patch
 	patches.kernel.org/6.6.17-064-drm-i915-gvt-Fix-uninitialized-variable-in-han.patch
 	patches.kernel.org/6.6.17-065-rxrpc-Fix-generation-of-serial-numbers-to-skip.patch
+	patches.kernel.org/6.6.17-066-rxrpc-Fix-delayed-ACKs-to-not-set-the-referenc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
