wifi: mac80211: fix waiting for beacons logic (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3619,6 +3619,7 @@
 	patches.kernel.org/6.6.17-042-x86-efistub-Avoid-placing-the-kernel-below-LOA.patch
 	patches.kernel.org/6.6.17-043-net-stmmac-xgmac-fix-handling-of-DPP-safety-er.patch
 	patches.kernel.org/6.6.17-044-wifi-mac80211-fix-RCU-use-in-TDLS-fast-xmit.patch
+	patches.kernel.org/6.6.17-045-wifi-mac80211-fix-waiting-for-beacons-logic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
