--- a/series.conf
+++ b/series.conf
@@ -3593,6 +3593,7 @@
 	patches.kernel.org/6.6.17-016-rust-upgrade-to-Rust-1.73.0.patch
 	patches.kernel.org/6.6.17-017-MAINTAINERS-add-Catherine-as-xfs-maintainer-fo.patch
 	patches.kernel.org/6.6.17-018-xfs-bump-max-fsgeom-struct-version.patch
+	patches.kernel.org/6.6.17-019-xfs-hoist-freeing-of-rt-data-fork-extent-mappi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
