dmaengine: fsl-dpaa2-qdma: Fix the size of dma pools (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3576,6 +3576,7 @@
 	patches.kernel.org/6.6.16-325-pds_core-Prevent-health-thread-from-running-du.patch
 	patches.kernel.org/6.6.16-326-Linux-6.6.16.patch
 	patches.kernel.org/6.6.17-001-ext4-regenerate-buddy-after-block-freeing-fail.patch
+	patches.kernel.org/6.6.17-002-dmaengine-fsl-dpaa2-qdma-Fix-the-size-of-dma-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
