--- a/series.conf
+++ b/series.conf
@@ -3636,6 +3636,7 @@
 	patches.kernel.org/6.6.17-059-octeontx2-pf-Fix-a-memleak-otx2_sq_init.patch
 	patches.kernel.org/6.6.17-060-hwmon-aspeed-pwm-tacho-mutex-for-tach-reading.patch
 	patches.kernel.org/6.6.17-061-hwmon-coretemp-Fix-out-of-bounds-memory-access.patch
+	patches.kernel.org/6.6.17-062-hwmon-coretemp-Fix-bogus-core_id-to-attr-name-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
