--- a/series.conf
+++ b/series.conf
@@ -3586,6 +3586,7 @@
 	patches.kernel.org/6.6.17-009-phy-ti-phy-omap-usb2-Fix-NULL-pointer-derefere.patch
 	patches.kernel.org/6.6.17-010-cifs-avoid-redundant-calls-to-disable-multicha.patch
 	patches.kernel.org/6.6.17-011-cifs-failure-to-add-channel-on-iface-should-bu.patch
+	patches.kernel.org/6.6.17-012-rust-arc-add-explicit-drop-around-Box-from_raw.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
