net: atlantic: Fix DMA mapping for PTP hwts ring (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3623,6 +3623,7 @@
 	patches.kernel.org/6.6.17-046-wifi-iwlwifi-exit-eSR-only-after-the-FW-does.patch
 	patches.kernel.org/6.6.17-047-wifi-brcmfmac-Adjust-n_channels-usage-for-__co.patch
 	patches.kernel.org/6.6.17-048-netdevsim-avoid-potential-loop-in-nsim_dev_tra.patch
+	patches.kernel.org/6.6.17-049-net-atlantic-Fix-DMA-mapping-for-PTP-hwts-ring.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
