--- a/series.conf
+++ b/series.conf
@@ -3618,6 +3618,7 @@
 	patches.kernel.org/6.6.17-041-x86-efistub-Give-up-if-memory-attribute-protoc.patch
 	patches.kernel.org/6.6.17-042-x86-efistub-Avoid-placing-the-kernel-below-LOA.patch
 	patches.kernel.org/6.6.17-043-net-stmmac-xgmac-fix-handling-of-DPP-safety-er.patch
+	patches.kernel.org/6.6.17-044-wifi-mac80211-fix-RCU-use-in-TDLS-fast-xmit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
