tipc: Check the bearer type before calling tipc_udp_nl_bearer_add() (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3644,6 +3644,7 @@
 	patches.kernel.org/6.6.17-067-rxrpc-Fix-response-to-PING-RESPONSE-ACKs-to-a-.patch
 	patches.kernel.org/6.6.17-068-rxrpc-Fix-counting-of-new-acks-and-nacks.patch
 	patches.kernel.org/6.6.17-069-selftests-net-let-big_tcp-test-cope-with-slow-.patch
+	patches.kernel.org/6.6.17-070-tipc-Check-the-bearer-type-before-calling-tipc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
