--- a/series.conf
+++ b/series.conf
@@ -3642,6 +3642,7 @@
 	patches.kernel.org/6.6.17-065-rxrpc-Fix-generation-of-serial-numbers-to-skip.patch
 	patches.kernel.org/6.6.17-066-rxrpc-Fix-delayed-ACKs-to-not-set-the-referenc.patch
 	patches.kernel.org/6.6.17-067-rxrpc-Fix-response-to-PING-RESPONSE-ACKs-to-a-.patch
+	patches.kernel.org/6.6.17-068-rxrpc-Fix-counting-of-new-acks-and-nacks.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
