--- a/series.conf
+++ b/series.conf
@@ -3583,6 +3583,7 @@
 	patches.kernel.org/6.6.17-006-phy-renesas-rcar-gen3-usb2-Fix-returning-wrong.patch
 	patches.kernel.org/6.6.17-007-perf-evlist-Fix-evlist__new_default-for-1-core.patch
 	patches.kernel.org/6.6.17-008-dmaengine-fix-is_slave_direction-return-false-.patch
+	patches.kernel.org/6.6.17-009-phy-ti-phy-omap-usb2-Fix-NULL-pointer-derefere.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
