--- a/series.conf
+++ b/series.conf
@@ -3698,6 +3698,7 @@
 	patches.kernel.org/6.6.17-121-io_uring-net-limit-inline-multishot-retries.patch
 	patches.kernel.org/6.6.17-122-net-stmmac-xgmac-use-define-for-string-constan.patch
 	patches.kernel.org/6.6.17-123-ALSA-usb-audio-Sort-quirk-table-entries.patch
+	patches.kernel.org/6.6.17-124-net-stmmac-xgmac-fix-a-typo-of-register-name-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
