--- a/series.conf
+++ b/series.conf
@@ -3582,6 +3582,7 @@
 	patches.kernel.org/6.6.17-005-dmaengine-fsl-qdma-Fix-a-memory-leak-related-t.patch
 	patches.kernel.org/6.6.17-006-phy-renesas-rcar-gen3-usb2-Fix-returning-wrong.patch
 	patches.kernel.org/6.6.17-007-perf-evlist-Fix-evlist__new_default-for-1-core.patch
+	patches.kernel.org/6.6.17-008-dmaengine-fix-is_slave_direction-return-false-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
