rxrpc: Fix response to PING RESPONSE ACKs to a dead call (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3641,6 +3641,7 @@
 	patches.kernel.org/6.6.17-064-drm-i915-gvt-Fix-uninitialized-variable-in-han.patch
 	patches.kernel.org/6.6.17-065-rxrpc-Fix-generation-of-serial-numbers-to-skip.patch
 	patches.kernel.org/6.6.17-066-rxrpc-Fix-delayed-ACKs-to-not-set-the-referenc.patch
+	patches.kernel.org/6.6.17-067-rxrpc-Fix-response-to-PING-RESPONSE-ACKs-to-a-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
