io_uring/poll: add requeue return code from poll multishot handling (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3694,6 +3694,7 @@
 	patches.kernel.org/6.6.17-117-io_uring-net-fix-sr-len-for-IORING_OP_RECV-wit.patch
 	patches.kernel.org/6.6.17-118-io_uring-poll-move-poll-execution-helpers-high.patch
 	patches.kernel.org/6.6.17-119-io_uring-net-un-indent-mshot-retry-path-in-io_.patch
+	patches.kernel.org/6.6.17-120-io_uring-poll-add-requeue-return-code-from-pol.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
