selftests/net: convert pmtu.sh to run it in unique namespace (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3626,6 +3626,7 @@
 	patches.kernel.org/6.6.17-049-net-atlantic-Fix-DMA-mapping-for-PTP-hwts-ring.patch
 	patches.kernel.org/6.6.17-050-selftests-net-cut-more-slack-for-gro-fwd-tests.patch
 	patches.kernel.org/6.6.17-051-selftests-net-convert-unicast_extensions.sh-to.patch
+	patches.kernel.org/6.6.17-052-selftests-net-convert-pmtu.sh-to-run-it-in-uni.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
