tsnep: Fix mapping for zero copy XDP_TX action (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3630,6 +3630,7 @@
 	patches.kernel.org/6.6.17-053-selftests-net-change-shebang-to-bash-to-suppor.patch
 	patches.kernel.org/6.6.17-054-selftests-net-fix-tcp-listener-handling-in-pmt.patch
 	patches.kernel.org/6.6.17-055-selftests-net-avoid-just-another-constant-wait.patch
+	patches.kernel.org/6.6.17-056-tsnep-Fix-mapping-for-zero-copy-XDP_TX-action.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
