--- a/series.conf
+++ b/series.conf
@@ -3607,6 +3607,7 @@
 	patches.kernel.org/6.6.17-030-xfs-up-ic_sema-if-flushing-data-device-fails.patch
 	patches.kernel.org/6.6.17-031-xfs-fix-internal-error-from-AGFL-exhaustion.patch
 	patches.kernel.org/6.6.17-032-xfs-fix-again-select-in-kconfig-XFS_ONLINE_SCR.patch
+	patches.kernel.org/6.6.17-033-xfs-inode-recovery-does-not-validate-the-recov.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
