--- a/series.conf
+++ b/series.conf
@@ -3596,6 +3596,7 @@
 	patches.kernel.org/6.6.17-019-xfs-hoist-freeing-of-rt-data-fork-extent-mappi.patch
 	patches.kernel.org/6.6.17-020-xfs-prevent-rt-growfs-when-quota-is-enabled.patch
 	patches.kernel.org/6.6.17-021-xfs-rt-stubs-should-return-negative-errnos-whe.patch
+	patches.kernel.org/6.6.17-022-xfs-fix-units-conversion-error-in-xfs_bmap_del.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
