netfilter: nft_set_pipapo: add helper to release pcpu scratch area (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3656,6 +3656,7 @@
 	patches.kernel.org/6.6.17-079-drm-amd-display-Implement-bounds-check-for-str.patch
 	patches.kernel.org/6.6.17-080-netfilter-nft_ct-reject-direction-for-ct-id.patch
 	patches.kernel.org/6.6.17-081-netfilter-nft_set_pipapo-store-index-in-scratc.patch
+	patches.kernel.org/6.6.17-082-netfilter-nft_set_pipapo-add-helper-to-release.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
