--- a/series.conf
+++ b/series.conf
@@ -3700,6 +3700,7 @@
 	patches.kernel.org/6.6.17-123-ALSA-usb-audio-Sort-quirk-table-entries.patch
 	patches.kernel.org/6.6.17-124-net-stmmac-xgmac-fix-a-typo-of-register-name-i.patch
 	patches.kernel.org/6.6.17-125-netfilter-nft_set_rbtree-skip-end-interval-ele.patch
+	patches.kernel.org/6.6.17-126-Linux-6.6.17.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
