drm/amd/display: Add NULL test for 'timing generator' in 'dcn21_set_pipe()' (bsc#1218260).

--- a/series.conf
+++ b/series.conf
@@ -3652,6 +3652,7 @@
 	patches.kernel.org/6.6.17-075-netfilter-nft_compat-reject-unused-compat-flag.patch
 	patches.kernel.org/6.6.17-076-netfilter-nft_compat-restrict-match-target-pro.patch
 	patches.kernel.org/6.6.17-077-drm-amd-display-Fix-panel_cntl-could-be-null-i.patch
+	patches.kernel.org/6.6.17-078-drm-amd-display-Add-NULL-test-for-timing-gener.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
